# simple-tcp-chat

./: .gitignore  README.md  build.sh
client/: CMakeLists.txt  main.cpp
client/include/: client.h
client/source/: client.cpp
infra/: comm.proto
infra/include/: comm.pb.h  dynamic_buff.h  logger.h  message.h  message_helpers.inl  message_parser.hpp
infra/source/: comm.pb.cc  dynamic_buff.cpp  logger.cpp  message.cpp
server/: CMakeLists.txt  main.cpp
server/include/: config.h  connection.h  exception.hpp  participant.hpp  room.h  room.hpp  server.h
server/source/: connection.cpp  room.cpp  server.cpp
test/: CMakeLists.txt  main.cpp
